editing Detailed in description
1.Account and teacher Dati into ultima password & nuova password & verifica password
2.Adding 2 inputs in the modal of domande (numero di righe / picture)

--- a/questions-editNew/domande.html
+++ b/questions-editNew/domande.html
@@ -145,6 +145,17 @@
               </select>
               <div class="input-group">
                 <input
+                  placeholder="Numero di righe"
+                  type="number"
+                  class="input-field"
+                  name="NumDiRighe"
+                  id="NumDiRighe"
+                  required
+                />
+                <label for="NumDiRighe" class="input-label">Numero di righe</label>
+              </div>
+              <div class="input-group">
+                <input
                   placeholder="duration"
                   type="number"
                   class="input-field"
@@ -154,6 +165,7 @@
                 />
                 <label for="duration" class="input-label">Durata (min)</label>
               </div>
+              
             </div>
             <div class="right">
               <select name="unit" id="unit">
@@ -176,8 +188,20 @@
                 <option value="4">caratteristiche fondamentali</option>
                 <option value="5">Decadentismo</option>
               </select>
+              <div class="input-group">
+                <input
+                  placeholder="Picture"
+                  type="image"
+                  class="input-field"
+                  name="Picture"
+                  id="Picture"
+                  required
+                />
+                <label for="Picture" class="input-label">Picture</label>
+              </div>
             </div>
           </div>
+          
           <div class="divider"></div>
           <div class="input-group">
             <textarea
