--- a/teachers-admin/teacher.html
+++ b/teachers-admin/teacher.html
@@ -110,21 +110,19 @@
         <div class="top">
           <div class="left">
             <div class="input-group">
-              <input type="text" class="input-field" name="name" id="name" value="Name" required />
-              <label for="name" class="input-label">Nome</label>
+              <input type="password" class="input-field" name="UltPassword" id="UltPassword" placeholder="Ultima password" required />
+              <label for="UltPassword" class="input-label">Ultima password</label>
             </div>
             <div class="divider"></div>
             <div class="input-group">
-              <input placeholder="cognome" type="text" class="input-field" name="cognome" id="cognome" value="Hussein"
-                required />
-              <label for="cognome" class="input-label">Cognome</label>
+              <input type="password" class="input-field" name="NuoPassword" id="NuoPassword" placeholder="Nuova password" required />
+              <label for="NuoPassword" class="input-label">Nuova password</label>
             </div>
             <div class="divider"></div>
 
             <div class="input-group">
-              <input placeholder="email" type="text" class="input-field" name="email" id="email" value="mohamed.hussein@gmail.com"
-                required />
-              <label for="email" class="input-label">Email</label>
+              <input type="password" class="input-field" name="VerPassword" id="VerPassword" placeholder="Verifica password"  required />
+              <label for="VerPassword" class="input-label">Verifica password</label>
             </div>
           </div>
 
