finished the functionality of the custom alert using jquery

--- a/components.html
+++ b/components.html
@@ -31,7 +31,7 @@
 
   <div class="divider"></div>
   <div class="alert alert-info show">
-    <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    <span class="closebtn">&times;</span>
     <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
     <div class="m-vertical"></div>
 
