--- a/questions-docente/domande.html
+++ b/questions-docente/domande.html
@@ -230,5 +230,6 @@
 
     <!-- drawer.js-link -->
     <script src="../js/drawer.js"></script>
+    <script src="../js/alter-trigger.js"></script>
   </body>
 </html>
