finished the nuovaDomanda.html

--- a/nuovaDomanda/nuova-domanda.html
+++ b/nuovaDomanda/nuova-domanda.html
@@ -124,7 +124,6 @@
               rows="10"
             ></textarea>
             <label for="text" class="input-label">Domanda</label>
-            <div class="material-icons functions-icon color-primary">iso</div>
           </div>
           <div class="m-vertical"></div>
           <div class="justify-center">
@@ -153,7 +152,7 @@
         </div>
         <p id="preview-text">
           When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and
-          they are \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
+          they are \[ x = {-b \pm \sqrt{b^2-4ac} \over 2a} \]
         </p>
         <div>
           <h5>
