--- a/components.html
+++ b/components.html
@@ -1,120 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Generazioni Esami | Sign Up</title>
+    <link rel="stylesheet" href="./css/basic.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/questions.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script> -->
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Generazioni Esami | Sign Up</title>
-  <link rel="stylesheet" href="./css/basic.css" />
-  <link rel="stylesheet" href="./css/components.css" />
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-</head>
-
-<body>
-  <nav>
-    <div>
-      <img src="./assets/img/logo-large.png" alt="logo-large" />
-      <div class="drawer-button">
-        <input type="checkbox" name="drawer-checkbox" id="drawer-checkbox" class="drawer-checkbox" />
-        <label for="drawer-checkbox">
-          <div></div>
-          <div></div>
-          <div></div>
-        </label>
-      </div>
-    </div>
-  </nav>
-
-  <!-- ------------------------------------------- alert ------------------------------------------- -->
-
-  <div class="divider"></div>
-  <div class="alert alert-info show">
-    <span class="closebtn">&times;</span>
-    <strong>Danger!</strong> Indicates a dangerous or potentially negative action.
-    <div class="m-vertical"></div>
-
-    <ul>
-      <li>asd</li>
-      <li>3da</li>
-    </ul>
-  </div>
-
-  <!-- ------------------------------------------ input ------------------------------------------------ -->
-
-  <div class="input-group">
-    <input type="text" placeholder="name" class="input-field" name="name" id="name" required />
-    <label for="name" class="input-label">Name</label>
-  </div>
-
-  <!-- ------------------------------------------ modal ------------------------------------------------ -->
-
-  <!-- Clicking on the a tag changes the url to [...]#modal-wrapper -->
-  <a href="#modal-wrapper" class="modal-open-btn">Open Demo Modal</a>
-  <div id="modal-wrapper" class="modal-wrapper">
-    <a href="#" class="modal-background"></a>
-    <div class="modal">
-      <h1>CSS Only Modal</h1>
-      <!--	to close the modal the url must be changed to [...]#	-->
-      <a href="#" class="modal-close-btn">&times;</a>
-    </div>
-  </div>
-
-  <!-- ------------------------------------------ question-block ------------------------------------------------ -->
-
-  <div class="question-wrapper">
-    <div>
+  <body>
+    <nav>
       <div>
-        <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
-        <h6>Oct, 8, 2020</h6>
+        <img src="./assets/img/logo-large.png" alt="logo-large" />
+        <div class="drawer-button">
+          <input
+            type="checkbox"
+            name="drawer-checkbox"
+            id="drawer-checkbox"
+            class="drawer-checkbox"
+          />
+          <label for="drawer-checkbox">
+            <div></div>
+            <div></div>
+            <div></div>
+          </label>
+        </div>
       </div>
-      <div class="dropdown">
-        <button></button>
+    </nav>
 
-        <!-- Options -->
-        <ul>
-          <li><span>Edit</span><i class="material-icons">create</i></li>
-          <li><span>Delete</span><i class="material-icons">delete</i></li>
-        </ul>
+    <!-- ------------------------------------------- alert ------------------------------------------- -->
+
+    <div class="divider"></div>
+    <div class="alert alert-info show">
+      <span class="closebtn">&times;</span>
+      <strong>Danger!</strong> Indicates a dangerous or potentially negative
+      action.
+      <div class="m-vertical"></div>
+
+      <ul>
+        <li>asd</li>
+        <li>3da</li>
+      </ul>
+    </div>
+
+    <!-- ------------------------------------------ input ------------------------------------------------ -->
+
+    <div class="input-group">
+      <input
+        type="text"
+        placeholder="name"
+        class="input-field"
+        name="name"
+        id="name"
+        required
+      />
+      <label for="name" class="input-label">Name</label>
+    </div>
+
+    <!-- ------------------------------------------ modal ------------------------------------------------ -->
+
+    <!-- Clicking on the a tag changes the url to [...]#modal-wrapper -->
+    <a href="#modal-wrapper" class="modal-open-btn">Open Demo Modal</a>
+    <div id="modal-wrapper" class="modal-wrapper">
+      <a href="#" class="modal-background"></a>
+      <div class="modal">
+        <h1>CSS Only Modal</h1>
+        <!--	to close the modal the url must be changed to [...]#	-->
+        <a href="#" class="modal-close-btn">&times;</a>
       </div>
     </div>
-    <p>
-      Sulla base di quanto studiato in classe, spiega il concetto di popolo in
-      ottica romantica, facendo un paragone tra il Romanticismo e le visioni
-      delle correnti fondamentale del Primo Ottocento.
-    </p>
-    <div>
-      <h5>
-        <span class="level difficult"></span>
-        <strong>Livello:</strong>
-        <span>Difficile</span>
-      </h5>
-      <h5><strong>Durata:</strong> 15min</h5>
+
+    <!-- question-modal - START -->
+    <div id="question-modal" class="modal-wrapper">
+      <a href="#" class="modal-background"></a>
+      <div class="modal question-modal">
+        <h1>Nuova Domanda</h1>
+        <form>
+          <div class="top">
+            <div class="left">
+              <select name="year" id="year">
+                <option value="" disabled selected hidden>Anno</option>
+                <option value="1">1 ITI</option>
+                <option value="2">2 ITI</option>
+                <option value="3">3 ITI</option>
+              </select>
+              <select name="level" id="level">
+                <option value="" disabled selected hidden>Livello</option>
+                <option value="1">Facile</option>
+                <option value="2">Medio</option>
+                <option value="3">Difficile</option>
+              </select>
+              <div class="input-group">
+                <input
+                  placeholder="duration"
+                  type="number"
+                  class="input-field"
+                  name="duration"
+                  id="duration"
+                  required
+                />
+                <label for="duration" class="input-label">Durata (min)</label>
+              </div>
+              <div class="input-group">
+                <input
+                  placeholder="righe"
+                  type="number"
+                  class="input-field"
+                  name="righe"
+                  id="righe"
+                  required
+                />
+                <label for="righe" class="input-label">Righe</label>
+              </div>
+            </div>
+            <div class="right">
+              <select name="unit" id="unit">
+                <option value="" disabled selected hidden>Unità</option>
+                <option value="1">Unita 1</option>
+                <option value="2">Unita 2</option>
+                <option value="3">Unita 3</option>
+              </select>
+              <select name="argument" id="argument">
+                <option value="" disabled selected hidden>Argomento</option>
+                <option value="1">Romanticismo</option>
+                <option value="2">Secondo Ottocento</option>
+                <option value="3">Primo Novecento</option>
+              </select>
+              <select name="subargument" id="subargument">
+                <option value="" disabled selected hidden>
+                  Sotto argomento
+                </option>
+                <option value="1">Romanticismo</option>
+                <option value="2">Neoclassicismo</option>
+                <option value="3">Giovanni Verga</option>
+                <option value="4">caratteristiche fondamentali</option>
+                <option value="5">Decadentismo</option>
+              </select>
+              <input
+                type="file"
+                name="image"
+                id="image-input"
+                accept="image/*"
+              />
+            </div>
+          </div>
+          <div class="divider"></div>
+          <div class="input-group">
+            <textarea
+              placeholder="text"
+              type="text"
+              class="input-field"
+              name="text"
+              id="text"
+              cols="30"
+              rows="10"
+            >
+            </textarea>
+            <label for="text" class="input-label">Domanda</label>
+          </div>
+          <div class="divider"></div>
+          <div class="input-group">
+            <input
+              type="text"
+              placeholder="formula"
+              class="input-field"
+              id="formula"
+            />
+            <label for="formula" class="input-label">Formula</label>
+          </div>
+          <input type="submit" value="Aggiungi" class="btn" />
+        </form>
+        <a href="#" class="modal-close-btn">&times;</a>
+      </div>
     </div>
-  </div>
+    <!-- question-modal - END -->
 
-  <!-- checkbox-group -->
-
-  <div class="checkbox-group">
-    <input type="checkbox" name="iti" id="iti" />
-    <label for="iti">
-      <i class="material-icons check">check</i>
-      <i class="material-icons add">add</i>
-      ITI
-    </label>
-  </div>
-
-  <!-- ------------------------------------------ container ------------------------------------------------ -->
-
-  <div class="container">
-
-    <select name="" id="" class="width-full">
-      <option value="">3</option>
-      <option value="">3</option>
-      <option value="">3</option>
-      <option value="">3</option>
-    </select>
+    <!-- ------------------------------------------ question-block ------------------------------------------------ -->
 
     <div class="question-wrapper">
       <div>
@@ -133,9 +207,9 @@
         </div>
       </div>
       <p>
-        Sulla base di quanto studiato in classe, spiega il concetto di popolo
-        in ottica romantica, facendo un paragone tra il Romanticismo e le
-        visioni delle correnti fondamentale del Primo Ottocento.
+        Sulla base di quanto studiato in classe, spiega il concetto di popolo in
+        ottica romantica, facendo un paragone tra il Romanticismo e le visioni
+        delle correnti fondamentale del Primo Ottocento.
       </p>
       <div>
         <h5>
@@ -146,93 +220,139 @@
         <h5><strong>Durata:</strong> 15min</h5>
       </div>
     </div>
-    <div class="question-wrapper">
-      <div>
+
+    <!-- checkbox-group -->
+
+    <div class="checkbox-group">
+      <input type="checkbox" name="iti" id="iti" />
+      <label for="iti">
+        <i class="material-icons check">check</i>
+        <i class="material-icons add">add</i>
+        ITI
+      </label>
+    </div>
+
+    <!-- ------------------------------------------ container ------------------------------------------------ -->
+
+    <div class="container">
+      <select name="" id="" class="width-full">
+        <option value="">3</option>
+        <option value="">3</option>
+        <option value="">3</option>
+        <option value="">3</option>
+      </select>
+
+      <div class="question-wrapper">
         <div>
-          <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
-          <h6>Oct, 8, 2020</h6>
-        </div>
-        <div class="dropdown">
-          <button></button>
+          <div>
+            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h6>Oct, 8, 2020</h6>
+          </div>
+          <div class="dropdown">
+            <button></button>
 
-          <!-- Options -->
-          <ul>
-            <li><span>Edit</span><i class="material-icons">create</i></li>
-            <li><span>Delete</span><i class="material-icons">delete</i></li>
-          </ul>
+            <!-- Options -->
+            <ul>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
+            </ul>
+          </div>
         </div>
-      </div>
-      <p>
-        Sulla base di quanto studiato in classe, spiega il concetto di popolo
-        in ottica romantica, facendo un paragone tra il Romanticismo e le
-        visioni delle correnti fondamentale del Primo Ottocento.
-      </p>
-      <div>
-        <h5>
-          <span class="level medium"></span>
-          <strong>Livello:</strong>
-          <span>Difficile</span>
-        </h5>
-        <h5><strong>Durata:</strong> 15min</h5>
-      </div>
-    </div>
-    <div class="question-wrapper">
-      <div>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
         <div>
-          <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
-          <h6>Oct, 8, 2020</h6>
-        </div>
-        <div class="dropdown">
-          <button></button>
-
-          <!-- Options -->
-          <ul>
-            <li><span>Edit</span><i class="material-icons">create</i></li>
-            <li><span>Delete</span><i class="material-icons">delete</i></li>
-          </ul>
+          <h5>
+            <span class="level difficult"></span>
+            <strong>Livello:</strong>
+            <span>Difficile</span>
+          </h5>
+          <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <p>
-        Sulla base di quanto studiato in classe, spiega il concetto di popolo
-        in ottica romantica, facendo un paragone tra il Romanticismo e le
-        visioni delle correnti fondamentale del Primo Ottocento.
-      </p>
-      <div>
-        <h5>
-          <span class="level easy"></span>
-          <strong>Livello:</strong>
-          <span>Difficile</span>
-        </h5>
-        <h5><strong>Durata:</strong> 15min</h5>
+      <div class="question-wrapper">
+        <div>
+          <div>
+            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h6>Oct, 8, 2020</h6>
+          </div>
+          <div class="dropdown">
+            <button></button>
+
+            <!-- Options -->
+            <ul>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
+            </ul>
+          </div>
+        </div>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
+        <div>
+          <h5>
+            <span class="level medium"></span>
+            <strong>Livello:</strong>
+            <span>Difficile</span>
+          </h5>
+          <h5><strong>Durata:</strong> 15min</h5>
+        </div>
+      </div>
+      <div class="question-wrapper">
+        <div>
+          <div>
+            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h6>Oct, 8, 2020</h6>
+          </div>
+          <div class="dropdown">
+            <button></button>
+
+            <!-- Options -->
+            <ul>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
+            </ul>
+          </div>
+        </div>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
+        <div>
+          <h5>
+            <span class="level easy"></span>
+            <strong>Livello:</strong>
+            <span>Difficile</span>
+          </h5>
+          <h5><strong>Durata:</strong> 15min</h5>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- ------------------------------------------- drawer ------------------------------------------- -->
+    <!-- ------------------------------------------- drawer ------------------------------------------- -->
 
-  <div class="drawer-background"></div>
-  <div class="drawer">
-    <div class="drawer-links">
-      <a href="#" class="active">
-        <i class="material-icons">account_circle</i>
-        Mohamed Hussein
-      </a>
-      <a href="./classes.html">Anni e Settori</a>
-      <a href="./home-coordinatore.html">Domande</a>
-      <a href="./subjects.html">Materie</a>
-      <a href="./teachers.html">Docenti</a>
-      <a href="./generate.html">Genera Esame</a>
+    <div class="drawer-background"></div>
+    <div class="drawer">
+      <div class="drawer-links">
+        <a href="#" class="active">
+          <i class="material-icons">account_circle</i>
+          Mohamed Hussein
+        </a>
+        <a href="./classes.html">Anni e Settori</a>
+        <a href="./home-coordinatore.html">Domande</a>
+        <a href="./subjects.html">Materie</a>
+        <a href="./teachers.html">Docenti</a>
+        <a href="./generate.html">Genera Esame</a>
 
-      <a href="#" class="flex">
-        <button class="btn flex-1">Log out</button>
-      </a>
+        <a href="#" class="flex">
+          <button class="btn flex-1">Log out</button>
+        </a>
+      </div>
     </div>
-  </div>
-
-
-
-
-</body>
-<script src="./js/drawer.js"></script>
-
+  </body>
 </html>
